 - Add argument 'function' to project, to store the result into a preallocated function
 - Remove CGAL dependency and mesh generation, now provided by mshr
 - Remove excessive printing of points during extrapolation
1.4.0 [2014-06-02]
 - Feature: Add set_diagonal (with GenericVector) to GenericMatrix
 - Fix many bugs associated with cell orientations on manifolds
 - Force all global dofs to be ordered last and to be on the last process
	in parallel
 - Speed up dof reordering of mixed space including global dofs by removing
	the latter from graph reordering
 - Force all dofs on a shared facet to be owned by the same process
 - Add FEniCS ('fenics') Python module, identical with DOLFIN Python module
 - Add function Form::set_some_coefficients()
 - Remove Boost.MPI dependency
 - Change GenericMatrix::compresss to return a new matrix (7be3a29)
 - Add function GenericTensor::empty()
 - Deprecate resizing of linear algebra via the GenericFoo interfaces
	(fixes #213)
 - Deprecate MPI::process_number() in favour of MPI::rank(MPI_Comm)
 - Use PETSc built-in reference counting to manage lifetime of wrapped PETSc
	objects
 - Remove random access function from MeshEntityIterator (fixes #178)
 - Add support for VTK 6 (fixes #149)
 - Use MPI communicator in interfaces. Permits the creation of distributed and
	local objects, e.g. Meshes.
 - Reduce memory usage and increase speed of mesh topology computation
1.3.0 [2014-01-07]
 - Feature: Enable assignment of sparse MeshValueCollections to MeshFunctions
 - Feature: Add free function assign that is used for sub function assignment
 - Feature: Add class FunctionAssigner that cache dofs for sub function
	assignment
 - Fix runtime dependency on checking swig version
 - Deprecate DofMap member methods vertex_to_dof_map and dof_to_vertex_map
 - Add free functions: vertex_to_dof_map and dof_to_vertex_map, and correct the
	ordering of the map.
 - Introduce CompiledSubDomain a more robust version of compiled_subdomains,